# scll-rust

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  check.sh  clippy.toml  deny.toml
.cargo/: config.toml
.github/workflows/: ci.yml  fuzz-nightly.yml
.proptest-regressions/: .gitkeep
crates/scll/: Cargo.toml  README.md
crates/scll-backend-rustcrypto/: Cargo.toml  README.md
crates/scll-backend-rustcrypto/src/: crypto.rs  key.rs  lib.rs  scp02.rs  scp03.rs
crates/scll-backend-rustcrypto/tests/: scp02_kat.rs  scp03_kat.rs
crates/scll-backend-rustcrypto/tests/vectors/: README.md  differential.py  scp02_ref.py  scp03_ref.py
crates/scll-core/: Cargo.toml  README.md
crates/scll-core/src/: aid.rs  error.rs  hexfmt.rs  lib.rs  lifecycle.rs  limits.rs  model.rs  report.rs  response.rs  tlv.rs  transport.rs
crates/scll-core/src/backend/: key.rs  mod.rs  scp02.rs  scp03.rs
crates/scll-core/src/cap/: components.rs  mod.rs
crates/scll-core/src/cap/testdata/: minimal_stored.cap  streaming_deflate.cap
crates/scll-core/src/command/: delete.rs  get_data.rs  get_status.rs  install.rs  load.rs  mod.rs  put_key.rs  rmac_session.rs  select.rs  set_status.rs
crates/scll-core/src/scp/: mod.rs  scp02.rs  scp03.rs
crates/scll-core/src/workflow/: applet.rs  card_status.rs  discover.rs  keys.rs  mod.rs  open_scp.rs  probe.rs  session.rs  ssd.rs  transmit.rs
crates/scll-core/tests/: replay_workflows.rs
crates/scll-test-support/: Cargo.toml
crates/scll-test-support/src/: fixtures.rs  lib.rs  mock_transport.rs  replay.rs  stub_backend.rs
crates/scll-test-util/: Cargo.toml
crates/scll-test-util/src/: lib.rs  privileges.rs
crates/scll-transport-jcsim/: Cargo.toml  README.md
crates/scll-transport-jcsim/src/: lib.rs
crates/scll-transport-pcsc/: Cargo.toml  README.md
crates/scll-transport-pcsc/src/: lib.rs
crates/scll/src/: lib.rs  manager.rs
crates/scll/tests/: smoke_jcsim.rs  smoke_pcsc.rs
docs/: jcsim-testing.md  pdd.md
examples/: Cargo.toml  README.md  run.sh
examples/src/: lib.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: cap_parser.rs  card_response_parsers.rs  rapdu_unwrap.rs  scp03_kdf_props.rs  scp_wrap_roundtrip.rs
fuzz/seeds/scp03_kdf_props/: aes128_s8  aes256_s16
fuzz/seeds/scp_wrap_roundtrip/: scp02  scp03_s16_level33  scp03_s8_level03
scripts/: verify-s8.sh
